@@ -6,23 +6,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.criteria.CriteriaBuilder;
-import jakarta.persistence.criteria.CriteriaQuery;
-import jakarta.persistence.criteria.Join;
-import jakarta.persistence.criteria.JoinType;
-import jakarta.persistence.criteria.Predicate;
-import jakarta.persistence.criteria.Root;
 import ogya.lokakarya.be.config.security.SecurityUtil;
 import ogya.lokakarya.be.dto.emptechnicalskill.EmpTechnicalSkillDto;
 import ogya.lokakarya.be.dto.emptechnicalskill.EmpTechnicalSkillFilter;
 import ogya.lokakarya.be.dto.emptechnicalskill.EmpTechnicalSkillReq;
 import ogya.lokakarya.be.entity.EmpTechnicalSkill;
-import ogya.lokakarya.be.entity.Menu;
 import ogya.lokakarya.be.entity.TechnicalSkill;
 import ogya.lokakarya.be.entity.User;
 import ogya.lokakarya.be.exception.ResponseException;
@@ -35,15 +26,11 @@ public class EmpTechnicalSkillServiceImpl implements EmpTechnicalSkillService {
     @Autowired
     private EmpTechnicalSkillRepository empTechnicalSkillRepository;
 
-
     @Autowired
     private TechnicalSkillRepository technicalSkillRepository;
 
     @Autowired
     private SecurityUtil securityUtil;
-
-    @Autowired
-    private EntityManager entityManager;
 
     @Override
     public List<EmpTechnicalSkillDto> createBulk(List<EmpTechnicalSkillReq> data) {
@@ -72,8 +59,7 @@ public class EmpTechnicalSkillServiceImpl implements EmpTechnicalSkillService {
         empTechnicalSkillEntities = empTechnicalSkillRepository.saveAll(empTechnicalSkillEntities);
 
         return empTechnicalSkillEntities.stream()
-                .map(empTechSkill -> new EmpTechnicalSkillDto(empTechSkill, true, false))
-                .collect(Collectors.toList());
+                .map(empTechSkill -> new EmpTechnicalSkillDto(empTechSkill, true, false)).toList();
     }
 
     @Override
@@ -98,47 +84,12 @@ public class EmpTechnicalSkillServiceImpl implements EmpTechnicalSkillService {
 
     @Override
     public List<EmpTechnicalSkillDto> getAllEmpTechnicalSkills(EmpTechnicalSkillFilter filter) {
-        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-        CriteriaQuery<EmpTechnicalSkill> query = cb.createQuery(EmpTechnicalSkill.class);
-        Root<EmpTechnicalSkill> root = query.from(EmpTechnicalSkill.class);
-
-        List<Predicate> predicates = new ArrayList<>();
-        if (filter.getUserIds() != null) {
-            Join<EmpTechnicalSkill, User> techSkillUserJoin = root.join("user", JoinType.LEFT);
-            predicates.add(techSkillUserJoin.get("id").in(filter.getUserIds()));
-        }
-
-        if (filter.getYears() != null) {
-            predicates.add(root.get("assessmentYear").in(filter.getYears()));
-        }
-
-        if (!predicates.isEmpty()) {
-            query.where(cb.and(predicates.toArray(new Predicate[predicates.size()])));
-        }
-
-        if (filter.getWithCreatedBy().booleanValue() || filter.getWithUpdatedBy().booleanValue()) {
-            Join<Menu, User> userJoin = null;
-            if (filter.getWithCreatedBy().booleanValue()) {
-                userJoin = root.join("createdBy", JoinType.LEFT);
-            }
-            if (filter.getWithUpdatedBy().booleanValue()) {
-                if (userJoin == null) {
-                    root.join("updatedBy", JoinType.LEFT);
-                } else {
-                    userJoin.join("updatedBy", JoinType.LEFT);
-                }
-            }
-        }
-
-        query.distinct(true);
-        query.select(root);
-
-        List<EmpTechnicalSkill> empTechSkillEntities =
-                entityManager.createQuery(query).getResultList();
-        List<EmpTechnicalSkillDto> empTechSkills = new ArrayList<>(empTechSkillEntities.size());
-        empTechSkillEntities.forEach(empTS -> empTechSkills.add(new EmpTechnicalSkillDto(empTS,
-                filter.getWithCreatedBy(), filter.getWithCreatedBy())));
-        return empTechSkills;
+        List<EmpTechnicalSkill> empTechnicalSkillEntities =
+                empTechnicalSkillRepository.findAllByFilter(filter);
+        return empTechnicalSkillEntities.stream()
+                .map(empAttSkill -> new EmpTechnicalSkillDto(empAttSkill, filter.getWithCreatedBy(),
+                        filter.getWithUpdatedBy()))
+                .toList();
     }
 
     @Override
